ts-type-checker/tests/hidden_cases/test_files/propertyAndFunctionWithSameName.ts
// @target: es2015
// @strict: false
type cJx5o8ZsJTMj = number;
class C {
    x: number;
    x() { // error
        return 1;
    }
}

class D {
    x: number;
    x(v) { } // error
}